@@ -238,6 +238,10 @@
 	* Incremented the library version to 2:0:2.
 	* Incremented the package version to 0.8.9.
 2016-02-25 Fred Gleason <fredg@paravelsystems.com>
-	* Renabled temp file cleanup code in 'src/webhostd/upgrade.cpp'.
+	* Reenabled temp file cleanup code in 'src/webhostd/upgrade.cpp'.
 2016-02-25 Fred Gleason <fredg@paravelsystems.com>
 	* Merged the 'WHHttpRequest' class into 'WHHttpConnection'.
+2016-02-25 Fred Gleason <fredg@paravelsystems.com>
+	* Removed the 'WHHttpServer::sendResponse()',
+	'WHHttpServer::sendHeader()' and 'WHHttpServer::sendError()' methods
+	from 'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
